[workspace]
members = [
    "crates/channels-console",
    "crates/channels-console-tokio-test",
    "crates/channels-console-futures-test",
    "crates/channels-console-std-test",
]
resolver = "2"

[workspace.dependencies]
channels-console = { path = "./crates/channels-console", version = "0.2.0" }
