[package]
name = "channels-console"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/pawurb/channels-console"
description = "Real-time monitoring and metrics for Rust channels."
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"], optional = true }
crossbeam-channel = "0.5"
futures-channel = { version = "0.3", optional = true }
futures-util = "0.3"
eyre = "0.6"
prettytable-rs = { version = "0.10", default-features = false }
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.29", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
colored = { version = "3", optional = true }
ureq = { version = "2", features = ["json"], optional = true }
chrono = { version = "0.4", optional = true }
cfg-if = "1.0"

[features]
channels-console = []
tui = ["dep:crossterm", "dep:ratatui", "dep:clap", "dep:colored", "dep:ureq", "dep:chrono"]
tokio = ["dep:tokio"]
futures = ["dep:tokio", "dep:futures-channel"]
dev = []

[dev-dependencies]
ureq = { version = "2", features = ["json"] }

[[bin]]
name = "channels-console"
path = "bin/main.rs"
required-features = ["tui"]
