[package]
name = "tokio-channels-console"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pawurb/tokio-channels-console"
description = "Like tokio-console, but for channels."
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
crossbeam-channel = "0.5"
eyre = "0.6"
prettytable-rs = { version = "0.10", default-features = false }
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.29", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
colored = { version = "3", optional = true }
ureq = { version = "2", features = ["json"], optional = true }
chrono = { version = "0.4", optional = true }

[features]
tokio-channels-console = []
tui = ["crossterm", "ratatui", "clap", "colored", "ureq", "chrono"]
dev = []

[dev-dependencies]
ureq = { version = "2", features = ["json"] }

[[bin]]
name = "tokio-channels-console"
path = "bin/main.rs"
required-features = ["tui"]
